Widgets have size. New Grid widget can draw and size. Draw.Compute monad in addition to Draw monad. Refactor TextEdit. Remove MySDL.Color, use SDL.Color directly

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Abstract away all of the SDLness in MySDL/Draw and rename it HaskGame? :-)
 * Animations:
   * Draw -> Animate?
     * Can use ID's on all drawings, and have it animate stuff moving around
