FocusDelegator to return unselectable if child unselectable

--- a/TODO
+++ b/TODO
@@ -1,5 +1,15 @@
-* Is it a good idea to have "new" return existential widgets? How do you "edit"
-  w and s values then?
+* When a widget is shown a state, should it be able to fix it, what if
+  its inconsistent? For example, a widget inside state becomes
+  unselectable
+
+* Everything contains everything via existentials, so how can you in
+  fact get access to the state?
+
+* Grid:
+  * should be able to jump to a selectable child if children become unselectable,
+    it controls children status changes because it handles them...
+  * should allow jumping to a child even if path via straight lines is not possible
+
 * Is it a good idea to use the AnyWidgetState existential all over the place, and
   lose type information?
 
