--- a/TODO
+++ b/TODO
@@ -1,9 +1,5 @@
 * Restructure it as a library and upload to hackage.
-  Name it: Graphics.UI.LUI?
-  Need a .cabal and Setup.hs files:
-    Put dependency on SDL-ttf >= 0.5.5 (The bug in prior version renders widget set
-    unusable on x86-64)
-
+  Export lists everywhere!
 * Abstract away SDL keyboard keys, events, flip and delay
   * Implement a GLUT-based version
 
