--- a/TODO
+++ b/TODO
@@ -1,19 +1,16 @@
+* Data.Binary instances
+
 * Widgets:
   * Scrollable
   * Grid with delete row/column, Box with delete item?
 
-* Remove BBox in favor of (Maybe Rect)?
-* intersectRect instead of intersectRects
-* fix blitPart/blit arg order?
 * How do I get the cropping to prevent the stuff underneath from
   running at all?
-
 * Perhaps replace Rect and (Vector2 Int) with more general types?
   * How can I create infinite-in-one-axis clip rects?
 
 * Need to create a "multi-widget" that gets multiple accessors, one widget and
   multiple viewers, and applies the widget modifications to all the accessors.
-
 * Multi-widget can be used instead of macros.
 
 * Maybe event handlers should give a model->(Maybe|Either) model
